--- a/style/main.css
+++ b/style/main.css
@@ -8,6 +8,10 @@
   font-family: 'Montserrat';
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 :root {
   --main-color: #ffc000;
   --header-head-color: #0D0D0D;
@@ -35,6 +39,7 @@ header{
   top: 0;
   z-index: 3;
   background-color: white;
+  box-shadow: 0px 8px 22px -6px rgba(24, 39, 75, 0.12), 0px 14px 64px -4px rgba(24, 39, 75, 0.12);
 }
 
 .head-header{
@@ -109,6 +114,10 @@ nav{
   color: #000000;
 }
 
+.navbar a:hover{
+  color: var(--main-color);
+}
+
 .nav-right{
   display: flex;
   gap: 15px;
@@ -129,6 +138,7 @@ nav{
   background: #FFC000;
   border-radius: 4px;
   border-color: transparent;
+  cursor: pointer;
 }
 
 
