--- a/style/main.css
+++ b/style/main.css
@@ -8,7 +8,7 @@
   font-family: 'Montserrat';
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -19,21 +19,21 @@ html{
   --basic-color: #F2F3F7;
 }
 
-.container-header{
+.container-header {
   max-width: 1440px;
   margin: 0 auto;
   padding-left: 145px;
   padding-right: 145px;
 }
 
-.container{
+.container {
   max-width: 1440px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
 
-header{
+header {
   background-color: #FAFAFA;
   position: sticky;
   top: 0;
@@ -42,13 +42,13 @@ header{
   box-shadow: 0px 8px 22px -6px rgba(24, 39, 75, 0.12), 0px 14px 64px -4px rgba(24, 39, 75, 0.12);
 }
 
-.head-header{
+.head-header {
   background-color: var(--header-head-color);
   padding: 13px 0px;
   width: 100%;
 }
 
-.head-header a{
+.head-header a {
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
@@ -56,23 +56,23 @@ header{
   line-height: 140%;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: rgba(255, 255, 255, 0.3);
   text-decoration: none;
   padding-right: 8px;
 }
 
-.head-header .active{
+.head-header .active {
   color: #FFFFFF;
 }
 
-nav{
+nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.logo{
+.logo {
   padding: 20px 0px;
 }
 
@@ -86,23 +86,23 @@ nav{
   height: 20px;
 }
 
-.logo2{
+.logo2 {
   display: none;
 }
 
-.navbar{
+.navbar {
   display: flex;
   gap: 223px;
 }
 
-.navbar ul{
+.navbar ul {
   display: flex;
   gap: 24px;
   list-style-type: none;
   align-items: center;
 }
 
-.navbar a{
+.navbar a {
   text-decoration: none;
   font-family: 'Montserrat';
   font-style: normal;
@@ -110,20 +110,20 @@ nav{
   font-size: 14px;
   line-height: 140%;
   letter-spacing: 0.1px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #000000;
 }
 
-.navbar a:hover{
+.navbar a:hover {
   color: var(--main-color);
 }
 
-.nav-right{
+.nav-right {
   display: flex;
   gap: 15px;
 }
 
-.nav-right button:first-child{
+.nav-right button:first-child {
   align-items: center;
   padding: 4px 8px;
   background: rgba(0, 0, 0, 0.05);
@@ -131,7 +131,7 @@ nav{
   border-color: transparent;
 }
 
-.nav-right button{
+.nav-right button {
   align-items: center;
   padding: 4px 8px;
   bottom: 18.75%;
@@ -143,11 +143,11 @@ nav{
 
 
 
-main{
+main {
   background-color: var(--basic-color);
 }
 
-.sec-1 .container{
+.sec-1 .container {
   /* display: flex;
   justify-content: space-between;
   align-items: center; */
@@ -157,7 +157,7 @@ main{
   height: 788px;
 }
 
-.sec-1__left{
+.sec-1__left {
   background-color: #000000;
   position: absolute;
   width: 1440px;
@@ -166,7 +166,7 @@ main{
   top: 150px;
 }
 
-.sec-1__left{
+.sec-1__left {
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -176,66 +176,66 @@ main{
   padding-top: 30px;
 }
 
-.sec-1__left h2{
+.sec-1__left h2 {
   width: 100%;
   font-weight: 700;
   font-size: 34px;
   line-height: 140%;
   letter-spacing: 0.25px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #FFFFFF;
   max-width: 588px;
 
 }
 
-.sec-1__left p{
+.sec-1__left p {
   font-weight: 500;
   font-size: 14px;
   line-height: 140%;
   letter-spacing: 0.1px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
-  color: #FFFFFF;  
+  font-feature-settings: 'pnum'on, 'lnum'on;
+  color: #FFFFFF;
   max-width: 588px;
 }
 
-.sec-1__left a{
+.sec-1__left a {
   font-weight: 600;
   font-size: 14px;
   line-height: 140%;
   letter-spacing: 0.75px;
   text-transform: uppercase;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #FFC000;
   text-decoration: none;
 }
 
-.sec-1__right{
+.sec-1__right {
   position: absolute;
   /* background-color: #000000; */
   z-index: 2;
   left: 788px;
-  top: 0px;  
+  top: 0px;
 }
 
-.sec-2{
+.sec-2 {
   display: flex;
   flex-direction: column;
   padding-top: 67px;
   padding-bottom: 80px;
 }
 
-.sec-2 h2{
+.sec-2 h2 {
   font-weight: 800;
   font-size: 34px;
   line-height: 140%;
   text-align: center;
   letter-spacing: 0.25px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #000000;
   padding-bottom: 24px;
 }
 
-.sec-2__cards{
+.sec-2__cards {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -243,7 +243,7 @@ main{
   padding-left: 50px;
 }
 
-.sec-2__cards div{
+.sec-2__cards div {
   background: #FFFFFF;
   border-radius: 12px;
   padding: 27px 78px;
@@ -254,36 +254,36 @@ main{
 }
 
 
-.sec-3{
+.sec-3 {
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-.sec-3 h2{
+.sec-3 h2 {
   font-weight: 800;
   font-size: 34px;
   line-height: 140%;
   text-align: center;
   letter-spacing: 0.25px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #000000;
   padding-bottom: 24px;
 }
 
-.best-cards{
+.best-cards {
   display: flex;
   gap: 30px;
   justify-content: center;
 }
 
-.best-card{
+.best-card {
   width: 264px;
   background-color: #FFFFFF;
   border-radius: 10px;
 }
 
-.best-card > div{
+.best-card>div {
   padding-top: 5px;
   padding-left: 13px;
   padding-right: 13px;
@@ -293,57 +293,57 @@ main{
   padding-bottom: 10px;
 }
 
-.best-card > div >div{
-display: flex;
-justify-content: space-between;
+.best-card>div>div {
+  display: flex;
+  justify-content: space-between;
 }
 
-.best-card button{
+.best-card button {
   letter-spacing: 0.75px;
   text-transform: uppercase;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   padding: 8px 24px;
   border-color: transparent;
   color: #000000;
   background: #FFC000;
-  border-radius: 6px; 
+  border-radius: 6px;
 }
 
-.sec-4{
+.sec-4 {
   padding-top: 64px;
   display: flex;
   flex-direction: column;
   justify-content: center
 }
 
-.sec-4 h2{
+.sec-4 h2 {
   font-weight: 800;
   font-size: 34px;
   line-height: 140%;
   text-align: center;
   letter-spacing: 0.25px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #000000;
   padding-bottom: 24px;
 }
 
-.categories{
+.categories {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 30px;
 }
 
-.categories_card:first-child{
+.categories_card:first-child {
   position: relative;
 }
 
-.categories_card p{
+.categories_card p {
   position: absolute;
   font-weight: 700;
   font-size: 24px;
   line-height: 140%;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #FFC000;
   padding: 22px 32px;
   top: 275px;
@@ -352,7 +352,7 @@ justify-content: space-between;
   border-radius: 0px 0px 10px 10px;
 }
 
-.sec-5{
+.sec-5 {
   padding-left: 145px;
   padding-right: 145px;
   margin-top: 245px;
@@ -365,53 +365,53 @@ justify-content: space-between;
   padding-bottom: 56px;
 }
 
-.sec-5__right{
+.sec-5__right {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   gap: 40px;
 }
 
-.sec-5__right h2{
+.sec-5__right h2 {
   font-weight: 700;
   font-size: 34px;
   line-height: 140%;
   letter-spacing: 0.25px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #FFFFFF;
 }
 
-.sec-5__right p{
+.sec-5__right p {
   color: #FFFFFF;
 }
 
-.sec-5__right div{
+.sec-5__right div {
   display: flex;
   gap: 30px;
 }
 
-.sec-6{
+.sec-6 {
   padding-bottom: 64px;
 }
 
-.sec-6 h2{
+.sec-6 h2 {
   font-weight: 800;
   font-size: 34px;
   line-height: 140%;
   text-align: center;
   letter-spacing: 0.25px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #000000;
   padding-bottom: 24px;
   padding-top: 64px;
 }
 
-.sec-7{
+.sec-7 {
   display: flex;
   padding-bottom: 48px;
 }
 
-.sec-7__right{
+.sec-7__right {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -421,27 +421,27 @@ justify-content: space-between;
   width: 100%;
 }
 
-.sec-7__right h2{
+.sec-7__right h2 {
   max-width: 556px;
   font-weight: 700;
   font-size: 34px;
   line-height: 140%;
   letter-spacing: 0.25px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #0D0D0D;
 }
 
-.sec-7__right p{
+.sec-7__right p {
   max-width: 558px;
   font-weight: 400;
   font-size: 16px;
   line-height: 140%;
   letter-spacing: 0.44px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #000000;
 }
 
-.sec-7__right button{
+.sec-7__right button {
   font-weight: 800;
   align-items: center;
   padding: 4px 8px;
@@ -451,22 +451,22 @@ justify-content: space-between;
   border-color: transparent;
 }
 
-.sec-8{
+.sec-8 {
   padding-bottom: 80px;
 }
 
-.sec-8 h2{
+.sec-8 h2 {
   font-weight: 700;
   font-size: 34px;
   line-height: 140%;
   text-align: center;
   letter-spacing: 0.25px;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #0D0D0D;
   max-width: 666px;
 }
 
-.sec-8 div{
+.sec-8 div {
   background-color: #FFC000;
   display: flex;
   justify-content: center;
@@ -474,27 +474,27 @@ justify-content: space-between;
   height: 470px;
 }
 
-footer .container{
+footer .container {
   padding: 46px 145px 0px 146px;
   display: flex;
   justify-content: space-evenly;
   padding-bottom: 25px;
 }
 
-footer .container > div{
+footer .container>div {
   max-width: 25%;
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
-footer h5{
+footer h5 {
   font-weight: 700;
   font-size: 14px;
   line-height: 140%;
   letter-spacing: 0.75px;
   text-transform: uppercase;
-  font-feature-settings: 'pnum' on, 'lnum' on;
+  font-feature-settings: 'pnum'on, 'lnum'on;
   color: #000000;
 }
 
@@ -508,109 +508,122 @@ footer h5{
     padding: 0px 5px;
   }
 
-  .head-header{
+  .head-header {
     display: none;
   }
 
-  .container-header{
+  .container-header {
     padding: 0 15px;
   }
 
-  .navbar ul{
+  .navbar ul {
     display: none;
   }
 
-  .logo{
+  .logo {
     display: flex;
     gap: 15px;
   }
-  .logo .toggle{
+
+  .logo .toggle {
     display: block;
   }
 
+  .toogle{
+    display: inline-block;
+  }
+
+  .header--open .logo2 {
+    display: block;
+    
+  }
+
   .header--open .logo .toggle {
-    background-image: url("../images/times-solid.svg");
+    margin-left: 200px;
+    z-index: 4;
   }
 
-  .header--open .logo{
-    display: none;
-  }
-
-  .header--open .logo .toggle {
-   margin-left: 200px;
-  }
-
-  .header--open .header .container-header nav .navbar ul{
-    gap: 40px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
+  .header--open {
     width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .header--open .toggle {
+    background-image: url('../images/times-solid.svg');
+  }
+  .header--open .nav .navbar ul{
+    padding-top: 50px;
 
-  }
-  .header--open .header .container-header nav .navbar ul li {
-    min-width: 100%;
-  }
-  .header--open .header .container-header nav .navbar ul li a {
-    padding: 13px 0;
-    min-width: 100%;
-  }
-
-  .header--open .header .container-header nav .navbar {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 45px 36px ;
-    width: 100%;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    /* background-color: cyan; */
+    justify-content: flex-start;
+    padding-bottom: 100px;
   }
-
-  .header--open .header .container-header nav .navbar a {
+  .header--open .nav .navbar ul li a{
+    width: 100%;  
+    font-weight: 700;
     font-size: 24px;
+    line-height: 140%;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+    color: #000000;
+  }
+  .header--open .nav-right{
+    display: none;
+  }
+  .header--open .container-header .nav .navbar .nav-right button{
+    display: block;
+    width: 100%;
   }
 
-  .header--open .header .container-header nav .navbar ul {
-    flex-direction: column;
-  }
-   .nav-right button{
+
+
+  
+  .nav-right button {
     display: none;
-   }
-   .logo{
+  }
+
+  .logo {
     align-items: center;
     gap: 15px;
-   }
-   .logo1{
-    display: none;
-   }
-   .logo2{
-    display: block;
-   }
+  }
 
-   .sec-1 .container{
+  .logo1 {
+    display: none;
+  }
+
+  .logo2 {
+    display: block;
+  }
+
+  .sec-1 .container {
     height: 100%;
-   }
-   .sec-1__right{
+  }
+
+  .sec-1__right {
     display: flex;
     justify-content: flex-end;
-   }
-   .sec-1__right img{
+  }
+
+  .sec-1__right img {
     max-width: 70%;
     padding-top: 50px;
-   }
-   .sec-2__cards{
+  }
+
+  .sec-2__cards {
     padding-left: 0px;
-   }
-   .sec-2__cards>div{
+  }
+
+  .sec-2__cards>div {
     width: 70%;
-   }
-   .sec-5{
+  }
+
+  .sec-5 {
     padding-right: 15px;
     padding-left: 15px;
-   }
+  }
 }
 
 @media screen and (max-width: 1000px) {
@@ -619,23 +632,24 @@ footer h5{
     padding: 0px 5px;
   }
 
-  .head-header{
+  .head-header {
     display: none;
   }
 
-  .container-header{
+  .container-header {
     padding: 0 15px;
   }
 
-  .navbar ul{
+  .navbar ul {
     display: none;
   }
 
-  .logo{
+  .logo {
     display: flex;
     gap: 15px;
   }
-  .logo .toggle{
+
+  .logo .toggle {
     display: block;
   }
 
@@ -643,15 +657,15 @@ footer h5{
     background-image: url("../images/times-solid.svg");
   }
 
-  .header--open .logo{
+  .header--open .logo {
     display: none;
   }
 
   .header--open .logo .toggle {
-   margin-left: 200px;
+    margin-left: 200px;
   }
 
-  .header--open .header .container-header nav .navbar ul{
+  .header--open .header .container-header nav .navbar ul {
     gap: 40px;
     flex-direction: column;
     align-items: center;
@@ -660,9 +674,11 @@ footer h5{
     width: 100%;
 
   }
+
   .header--open .header .container-header nav .navbar ul li {
     min-width: 100%;
   }
+
   .header--open .header .container-header nav .navbar ul li a {
     padding: 13px 0;
     min-width: 100%;
@@ -672,7 +688,7 @@ footer h5{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 45px 36px ;
+    padding: 45px 36px;
     width: 100%;
     position: absolute;
     top: 100%;
@@ -688,57 +704,70 @@ footer h5{
     flex-direction: column;
   }
 
-  .sec-1__left{
+  .sec-1__left {
     display: none;
   }
 
-  .sec-1{
+  .sec-1 {
     position: static;
     display: flex;
     background-color: var(--sec-1);
 
   }
-  .sec-1__right{
+
+  .sec-1__right {
     position: static;
   }
-  .sec-2__cards{
+
+  .sec-2__cards {
     flex-direction: column;
     gap: 20px;
   }
-  .sec-2__cards>div{
+
+  .sec-2__cards>div {
     width: 50%;
   }
-  .sec-2__cards p{
+
+  .sec-2__cards p {
     text-align: center;
   }
-  .best-cards{
+
+  .best-cards {
     flex-wrap: wrap;
   }
-  .categories{
+
+  .categories {
     flex-wrap: wrap;
   }
-  .sec-5{
+
+  .sec-5 {
     flex-direction: column;
     height: 100%;
   }
-  .sec-5__left img{
+
+  .sec-5__left img {
     margin-top: -150px;
   }
-  .sec-7{
+
+  .sec-7 {
     flex-direction: column;
   }
-  .sec-7__left img{
+
+  .sec-7__left img {
     width: 100%;
   }
-  .sec-7__right{
+
+  .sec-7__right {
     padding: 45px 25px;
   }
-  footer .container{
+
+  footer .container {
     flex-wrap: wrap;
     padding-left: 25px;
     padding-right: 15px;
   }
-  footer .container>div{
+
+  footer .container>div {
     flex: 50%;
     max-width: 50%;
     padding-bottom: 25px;
