partner.html yangilandi

--- a/style/partner.css
+++ b/style/partner.css
@@ -90,6 +90,9 @@ p{
         margin-bottom: 40px;
         padding: 0px;
     }
+    h1{
+        font-size: 34px;
+    }
 }
 @media screen and (max-width: 1000px){
     .container{
