--- a/style/category-products.css
+++ b/style/category-products.css
@@ -13,6 +13,7 @@
 main .container{
     padding-top: 80px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 main .inner-container{
@@ -69,6 +70,7 @@ main .inner-container{
 }
 
 .items li p{
+    display: flex;
     border: 1px solid rgb(175, 173, 173);
     padding: 5px 10px;
     border-radius: 5px;
@@ -96,6 +98,7 @@ main .inner-container{
     display: flex;
     justify-content: space-around;
     padding-bottom: 20px;
+    flex-wrap: wrap;
 }
 
 .sec-3 h1{
@@ -112,4 +115,13 @@ main .inner-container{
 .sec-3 .inner-container li img{
     width: 350px;
     height: 300px;
+}
+
+@media (max-width: 900px) {
+    .inner-container2{
+        text-align: center;
+    }
+    .items{
+        justify-content: center;
+    }
 }
