--- a/style/main.css
+++ b/style/main.css
@@ -498,6 +498,9 @@ footer h5 {
   color: #000000;
 }
 
+.toogle{
+  display: none;
+}
 
 
 /* first-desktop */
@@ -531,53 +534,39 @@ footer h5 {
 
   .toogle{
     display: inline-block;
+    font-size: 25px;
   }
 
-  .header--open .logo2 {
-    display: block;
+  .responsive {
+    position: fixed;
+    display: inline-block !important;
+    z-index: 1;
+    top: 0;
+    height: 50vh;
+    left: 0;
+    right: 200px;
+    padding-left: 25px;
+    background-color: #fff;
+    bottom: 0;
+    width: 100%;
+    padding-top: 30px;
     
-  }
-
-  .header--open .logo .toggle {
-    margin-left: 200px;
-    z-index: 4;
-  }
-
-  .header--open {
+}
+.responsive ul{
+  margin-bottom: 30px;
+}
+.responsive li {
     width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .header--open .toggle {
-    background-image: url('../images/times-solid.svg');
-  }
-  .header--open .nav .navbar ul{
-    padding-top: 50px;
+    padding-top: 25px;
+}
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding-bottom: 100px;
-  }
-  .header--open .nav .navbar ul li a{
-    width: 100%;  
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 140%;
-    font-feature-settings: 'pnum' on, 'lnum' on;
-    color: #000000;
-  }
-  .header--open .nav-right{
-    display: none;
-  }
-  .header--open .container-header .nav .navbar .nav-right button{
-    display: block;
-    width: 100%;
-  }
+.responsive li a{
+  font-size: 24px;
+}
 
+.responsive .nav-right button{
+  display: inline-block;
+}
 
 
   
@@ -632,6 +621,42 @@ footer h5 {
     padding: 0px 5px;
   }
 
+  .toogle{
+    display: inline-block;
+    font-size: 25px;
+  }
+
+  .responsive {
+    position: fixed;
+    display: inline-block !important;
+    z-index: 1;
+    top: 0;
+    height: 100vh;
+    left: 0;
+    right: 200px;
+    padding-left: 25px;
+    background-color: #fff;
+    bottom: 0;
+    width: 50%;
+    padding-top: 30px;
+    
+}
+.responsive ul{
+  margin-bottom: 30px;
+}
+.responsive li {
+    width: 100%;
+    padding-top: 25px;
+}
+
+.responsive li a{
+  font-size: 24px;
+}
+
+.responsive .nav-right button{
+  display: inline-block;
+}
+
   .head-header {
     display: none;
   }
@@ -649,6 +674,14 @@ footer h5 {
     gap: 15px;
   }
 
+  .logo1{
+    width: 100px;
+    height: 20px;
+  }
+  .logo1-div{
+    display: flex;
+    align-items: center;
+  }
   .logo .toggle {
     display: block;
   }
