--- a/style/main.css
+++ b/style/main.css
@@ -628,17 +628,13 @@ footer h5 {
   .responsive {
     position: fixed;
     display: inline-block !important;
-    z-index: 1;
     top: 0;
-    height: 100vh;
     left: 0;
-    right: 200px;
-    padding-left: 25px;
     background-color: #fff;
-    bottom: 0;
-    width: 50%;
     padding-top: 30px;
-    
+    padding-left: 30px;
+    padding-bottom: 100px;
+    padding-right: 50px;
 }
 .responsive ul{
   margin-bottom: 30px;
