--- a/style/main.css
+++ b/style/main.css
@@ -15,8 +15,7 @@
 .container {
   max-width: 1440px;
   margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding:0px 147px;
 }
 
 /* first-desktop */
